# TemGymLite

./: .gitignore  README.md  pyproject.toml
examples/: all_components_example_matplotlib.py  basic_biprism_example_matplotlib.py  beam_tilt_shift_advanced_example_matplotlib.py  beam_tilt_shift_basic_example_matplotlib.py  condenser_aperture_example_matplotlib.py  condenser_astigmatism_example_matplotlib.py  model_sem_example_matplotlib.py  model_tem_example_matplotlib.py  split_condenser_example_matplotlib.py
src/temgymlite/: .gitignore  __init__.py  components.py  functions.py  model.py  run.py  shapes.py
