[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temgymlite"
version = "0.6.0.0"
authors = [
  { name="David Landers", email="davidlanders2009@hotmail.com" },
  { name="Georgios Varnavides", email="gvarnavides@berkeley.edu" },
]
description = "A lite version of the educational TEM ray tracing matrix package TEMGymBasic"
readme = "README.md"
requires-python = ">3.9.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  'numpy',
  'matplotlib',
]

[project.urls]
"Homepage" = "https://github.com/gvarnavi/TemGymLite"
